--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>infect.services</title>
 </head>
 <body>
-    
+
+   <img src="/assets/CommingSoon.png" alt="Comming Soon">
+
 </body>
 </html>
