Added center - Final CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-   <img src="/assets/CommingSoon.png" alt="Comming Soon">
+   <img src="/assets/CommingSoon.png" alt="Comming Soon" class = "cmingimg">
 
 </body>
 </html>
