--- a/countries.html
+++ b/countries.html
@@ -1,13 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Countries</title>
 </head>
+
 <body>
-    
-    
+    <strong><h1 class = "title">Countries</h1></strong>
+    <hr noshade>
+    <p class = "countryList">
+        USA
+        India
+        Brazil
+        France
+        Russia
+        Spain
+        UK
+        Argentina
+        Colombia
+        Italy
+        Mexico
+        Peru
+        Germany
+        Iran
+        South Africa
+        Poland
+        Chile
+        Ukraine
+        Belgium
+        Iraq
+        Indonesia
+        Czechia
+        Netherlands
+        Bangladesh
+        Turkey
+        Philippines
+        Pakistan
+        Romania
+        Saudi Arabia
+        Israel
+        Canada
+        Morocco
+        Switzerland
+        Portugal
+        Nepal
+        Austria
+        Ecuador
+        Sweden
+        UAE
+        Panama
+        Bolivia
+        Jordan
+        Hungary
+        Kuwait
+        Qatar
+        Dominican Republic
+        Costa Rica
+        Kazakhstan
+        Oman
+        Armenia
+        Japan
+        Guatemala
+        Belarus
+        Egypt
+        Lebanon
+        Ethiopia
+        Honduras
+        Bulgaria
+        Venezuela
+        Moldova
+        China
+        Slovakia
+        Bahrain
+        Croatia
+        Serbia
+        Tunisia
+        Georgia
+        Azerbaijan
+        Libya
+        Greece
+        Paraguay
+        Bosnia and Herzegovina
+        Uzbekistan
+        Kenya
+        Myanmar
+        Ireland
+        Algeria
+        Kyrgyzstan
+        Nigeria
+        Palestine
+        Denmark
+        Singapore
+        Slovenia
+        Ghana
+        Malaysia
+        North Macedonia
+        Afghanistan
+        El Salvador
+        Lithuania
+        Norway
+        S. Korea
+        Australia
+        Albania
+        Montenegro
+        Luxembourg
+        Cameroon
+        Ivory Coast
+        Finland
+        Madagascar
+        Zambia
+        Sri Lanka
+        Uganda
+        Senegal
+        Sudan
+        Mozambique
+        Namibia
+        Angola
+        Guinea
+        Maldives
+        DRC
+        French Polynesia
+        Tajikistan
+        French Guiana
+        Latvia
+        Jamaica
+        Cabo Verde
+        Haiti
+        Gabon
+        Zimbabwe
+        Botswana
+        Guadeloupe
+        Mauritania
+        Malta
+        Cuba
+        Estonia
+        Bahamas
+        Réunion
+        Cyprus
+        Syria
+        Eswatini
+        Trinidad and Tobago
+        Malawi
+        Andorra
+        Nicaragua
+        Djibouti
+        Congo
+        Hong Kong
+        Rwanda
+        Suriname
+        Iceland
+        Equatorial Guinea
+        Mayotte
+        CAR
+        Guyana
+        Martinique
+        Belize
+        Aruba
+        Somalia
+        Uruguay
+        Mali
+        Thailand
+        Gambia
+        South Sudan
+        Benin
+        Togo
+        Burkina Faso
+        Guinea-Bissau
+        Sierra Leone
+        Yemen
+        Lesotho
+        New Zealand
+        Chad
+        Liberia
+        Curaçao
+        Niger
+        Vietnam
+        San Marino
+        Channel Islands
+        Liechtenstein
+        Sao Tome and Principe
+        Sint Maarten
+        Gibraltar
+        Turks and Caicos
+        Diamond Princess
+        Saint Martin
+        Burundi
+        Papua New Guinea
+        Taiwan
+        Comoros
+        Monaco
+        Tanzania
+        Faeroe Islands
+        Eritrea
+        Mauritius
+        Mongolia
+        Bhutan
+        Isle of Man
+        Cambodia
+        Cayman Islands
+        Barbados
+        Bermuda
+        Saint Lucia
+        Seychelles
+        Caribbean Netherlands
+        Brunei
+        Antigua and Barbuda
+        St. Barth
+        St. Vincent Grenadines
+        British Virgin Islands
+        Dominica
+        Macao
+        Fiji
+        Grenada
+        New Caledonia
+        Timor-Leste
+        Vatican City
+        Laos
+        Saint Kitts and Nevis
+        Greenland
+        Saint Pierre Miquelon
+        Solomon Islands
+        Falkland Islands
+        Montserrat
+        Western Sahara
+        MS Zaandam
+        Anguilla
+        Marshall Islands
+        Vanuatu
+        Wallis and Futuna
+    </p>
 
 </body>
+
 </html>
