--- a/countries.html
+++ b/countries.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel='shortcut icon' type='image/x-icon' href='/assets/favicon.ico' />
     <title>Countries</title>
 </head>
 
