Added Github Button

--- a/countries.html
+++ b/countries.html
@@ -10,9 +10,17 @@
 </head>
 
 <body>
-    <strong><h1 class = "title">Countries</h1></strong>
+    <div class="stickyButton">
+        <img src="assets/Github.png"
+            onclick="window.open('https://github.com/CodingClubAtWali/COVID-19-Site','_blank')" />
+    </div>
+
+
+    <strong>
+        <h1 class="title">Countries</h1>
+    </strong>
     <hr noshade>
-    <p class = "countryList">
+    <p class="countryList">
         USA
         India
         Brazil
