--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,14 @@
     <link rel='shortcut icon' type='image/x-icon' href='/assets/favicon.ico' />
     <title>infect.services</title>
 </head>
-<body>
 
-   <img src="/assets/CommingSoon.png" alt="Comming Soon" class = "cmingimg">
+<body>
+    <div class="stickyButton">
+        <img src="assets/Github.png"
+            onclick="window.open('https://github.com/CodingClubAtWali/COVID-19-Site','_blank')" />
+    </div>
+    <img src="/assets/CommingSoon.png" alt="Comming Soon" class="cmingimg">
 
 </body>
+
 </html>
