Added Center Image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="assets/Github.png"
             onclick="window.open('https://github.com/CodingClubAtWali/COVID-19-Site','_blank')" />
     </div>
-    <img src="/assets/CommingSoon.png" alt="Comming Soon" class="cmingimg">
+    <div class = "imageContainer"><img src="/assets/CommingSoon.png" alt="Comming Soon"></div>
 
 </body>
 
